--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,12 +1,38 @@
 name: Enders Game
 version: 1.0
 website: http://www.homieserver.com/index.php?forum/
+author: mike101102
 main: com.homie.endersgame.EndersGame
+commands:
+    eg:
+        aliases: [endersgame]
+        description: EndersGame main command
+        usage: /<command>
 permissions:
     EndersGame.*:
         description: Gives access to all EndersGame permissions
         children:
             EndersGame.createsign: true
+            EndersGame.create: true
+            EndersGame.delete: true
+            EndersGame.join: true
+            EndersGame.override: true
+            EndersGame.list: true
     EndersGame.createsign:
         description: Allows you to create a sign for join an Enders Game
-        default: true
+        default: op
+    EndersGame.create:
+        description: Allows you to setup a game/arena/lobby
+        default: op
+    EndersGame.delete:
+        description: Allows you to delete a game/arena/lobby
+        default: op
+    EndersGame.join:
+        description: Allows you to join a game/arena and leave
+        default: op
+    EndersGame.override:
+        description: Allows you to build in games/arenas and query the SQL server
+        default: op
+    EnderGame.list:
+        description: Allows you to view a list of all ID's
+        default: op
