Fixed many bugs, players can leave games now, players who leave the server leave the game, offline player support, unfinished commands are finished now, new events, new runnables.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -11,6 +11,7 @@ commands:
 permissions:
     EndersGame.*:
         description: Gives access to all EndersGame permissions
+        default: true
         children:
             EndersGame.createsign: true
             EndersGame.create: true
